# niflow-icaaroma

./: setup.cfg
niflow/poldracklab/ica_aroma/: cli.py
niflow/poldracklab/ica_aroma/interfaces/: aroma_functions.py
niflow/poldracklab/ica_aroma/workflows/: workflow.py
