[metadata]
name = niflow-icaaroma
version = attr: cookiecutter.poldracklab.ica_aroma.__version__
url = https://github.com/niflows/niflow-icaaroma
author = James Kent
author_email = james-kent@uiowa.edu
description = niflow-icaaroma workflow package
license = Apache License, 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
# Place any Python dependencies here
install_requires = 
    nipype
# Uncomment the following line if your package should distribute any non-Python files
# include_package_data = True

[options.entry_points]
console_scripts =
    niflow-icaaroma = cookiecutter.poldracklab.ica_aroma.cli:main

## If your workflow requires data to run, uncomment and update the following section:
# [options.package_data]
# niflow-icaaroma =
#     niflow/poldracklab/ica_aroma/data/*
